# hydra-ci-example-cpp

./: CMakeLists.txt  Makefile  README.md  default.nix  main.cpp  release.nix
include/hellolib/: hello.hpp
src/: hello.cpp
tests/: CMakeLists.txt  test_helloworld.cpp
